--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
 	compileSdkVersion 21
-	buildToolsVersion '21.1.2'
+	buildToolsVersion '22.0.1'
 
 	defaultConfig {
 		applicationId "com.nkming.packageinfo"
@@ -22,12 +22,12 @@ android {
 }
 
 dependencies {
-	compile fileTree(include: ['*.jar'], dir: 'libs')
+	compile fileTree(dir: 'libs', include: ['*.jar'])
 	compile 'com.shamanland:fab:0.0.8'
 	compile 'com.afollestad:material-dialogs:0.6.3.0'
-	compile 'com.android.support:support-v4:21.0.3'
-	compile 'com.android.support:appcompat-v7:21.0.3'
-	compile 'com.android.support:cardview-v7:21.0.3'
-	compile 'com.android.support:recyclerview-v7:21.0.3'
+	compile 'com.android.support:support-v4:22.0.0'
+	compile 'com.android.support:appcompat-v7:22.0.0'
+	compile 'com.android.support:cardview-v7:22.0.0'
+	compile 'com.android.support:recyclerview-v7:22.0.0'
 	compile project(':libutils')
 }
